feat: add customer create update API
